[gd_scene load_steps=2 format=3 uid="uid://cyc5wwtuaf374"]

[ext_resource type="Script" uid="uid://da5nc0oyax741" path="res://Code/debug/debug_menu.gd" id="1_s1dwp"]

[node name="DebugMenu" type="Node2D"]
script = ExtResource("1_s1dwp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="SCENE1" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "SCENE1"

[node name="SCENE2" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "SCENE2"

[node name="SCENE3" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "SCENE3
"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.5
offset_right = 53.5
offset_bottom = 55.0
grow_horizontal = 2

[node name="resolutionOptionButton" type="OptionButton" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2

[node name="fullscreenCheckBox" type="CheckBox" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
text = "Fullscreen
"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[connection signal="pressed" from="CanvasLayer/VBoxContainer/SCENE1" to="." method="_on_scene_1_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SCENE2" to="." method="_on_scene_2_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SCENE3" to="." method="_on_scene_3_pressed"]
[connection signal="item_selected" from="CanvasLayer/VBoxContainer2/resolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer2/fullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
